<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LayoutApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_linear_layout">Linear Layout</string>
    <string name="str_relative_layout">Relative Layout</string>
    <string name="str_frame_layout">Frame_Layout</string>
    <string name="str_scroll_layout">Scroll Layout</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>

</resources>
