<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ar.com.educacionit.android.layoutapp.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AbrirLinearLayout"
        android:text="@string/str_linear_layout" />

    <Button
        android:id="@+id/button_RelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AbrirRelativeLayout"
        android:text="@string/str_relative_layout" />

    <Button
        android:id="@+id/button_FrameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AbrirFrameLayout"
        android:text="@string/str_frame_layout" />

    <Button
        android:id="@+id/button_SLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="AbrirScrollLayout"
        android:text="@string/str_scroll_layout" />

</LinearLayout>
